Reorg and fix getting resource file